// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core: Color BackgroundColors renders 1`] = `
<section>
  <h2
    id="background-colors"
  >
    Background colors
  </h2>
  <p>
    To maintain an open and welcoming experience we mostly use no background color, that is white. Our background colors have a functional role and are used to organize, structure or highlight a section. Apricot is our primary background color, gray and light turquoise are complementary. 
  </p>
  <div
    className="color-group"
  >
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box has-border"
      >
        <svg>
          <rect
            fill="#FFFFFF"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          White
        </p>
        <small
          className="small mb-0"
        >
          bg-white
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #FFFFFF
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#FBF2EA"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Apricot
        </p>
        <small
          className="small mb-0"
        >
          bg-primary
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #FBF2EA
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FBF2EA"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FBF2EA"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#EBF8F2"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Turquoise lighter
        </p>
        <small
          className="small mb-0"
        >
          bg-secondary
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #EBF8F2
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBF8F2"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBF8F2"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#EBE7E2"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Gray
        </p>
        <small
          className="small mb-0"
        >
          bg-tertiary
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #EBE7E2
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBE7E2"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBE7E2"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box has-border"
      >
        <svg>
          <rect
            fill="#F9F8F6"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Gray light
        </p>
        <small
          className="small mb-0"
        >
          bg-quaternary
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #F9F8F6
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#F9F8F6"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#F9F8F6"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Core: Color BrownScaleColors renders 1`] = `
<section>
  <h2
    id="brown-scale-colors"
  >
    Brown scale colors
  </h2>
  <p>
    Brown scale colors are used for both typography, borders and interface details to maintain a warm and welcoming expression.
  </p>
  <div
    className="color-group"
  >
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#2F2424"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown solid
        </p>
        <small
          className="small mb-0"
        >
          brown-solid
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #2F2424
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#2F2424"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#2F2424"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#493C3B"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown dark
        </p>
        <small
          className="small mb-0"
        >
          brown-dark
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #493C3B
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#493C3B"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#493C3B"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#72605E"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown medium
        </p>
        <small
          className="small mb-0"
        >
          brown-medium
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #72605E
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#72605E"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#72605E"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#A38B80"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown soft
        </p>
        <small
          className="small mb-0"
        >
          brown-soft
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #A38B80
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#A38B80"
              />
            </svg>
            <i
              className="material-icons warning"
            >
              warning
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#A38B80"
              />
            </svg>
            <i
              className="material-icons warning"
            >
              warning
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#D4C4BC"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown light
        </p>
        <small
          className="small mb-0"
        >
          brown-light
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #D4C4BC
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#D4C4BC"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#D4C4BC"
              />
            </svg>
            <i
              className="material-icons warning"
            >
              warning
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Core: Color CommunicationColors renders 1`] = `
<section>
  <p>
    It is important to maintain sufficient color contrast in our products to meet accessability requirements. For normal text content this means a 4.5:1 ratio against background and for graphics and large text (18 px, or bold 14 px) a 3:1 ratio against background. To help you to make informed color decisions, we showcase the contrast ratio of each color to our default text (brown) and background (white) color here. 
  </p>
  <div
    className="d-flex flex-row justify-content-around color-contrast-section"
  >
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons check mr-1"
      >
        check_circle
      </i>
      <b>
        Pass (≥ 4.5:1)
      </b>
    </span>
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons warning mr-1"
      >
        warning
      </i>
      <b>
        OK for graphics or large text (≥ 3:1)
      </b>
    </span>
    <span
      className="d-flex"
    >
      <i
        aria-hidden="true"
        className="material-icons cancel mr-1"
      >
        error
      </i>
      <b>
        Fail
      </b>
    </span>
  </div>
</section>
`;

exports[`Core: Color Lead renders 1`] = `
<section>
  <p
    className="lead"
  >
    The primary color of Swedbank Pay is yellow, it is used to give a unified appearance and create visual recognition. Yellow is an energetic and vibrant color that matches the brand of Swedbank Pay. In complement to this, Swedbank Pay uses a selection of colors from Swedbank´s color palette.
  </p>
  <div
    className="d-flex flex-column align-items-center mt-5"
  >
    <img
      alt=""
      className="w-100"
      src="/TEST/img/documentation/colors/color-palette.png"
    />
    <span
      className="caption-text"
    >
      <span
        className="font-weight-bold"
      >
        Figure 1.
      </span>
      A selection of colors from the Swedbank Pay color palette.
    </span>
  </div>
</section>
`;

exports[`Core: Color MainColors renders 1`] = `
<section>
  <h2
    id="main-colors"
  >
    Primary and secondary colors
  </h2>
  <p>
    The primary color in our palette is green. The green color is a strong carrier of identity and a means of creating immediate recognition.
  </p>
  <div
    className="color-group flex-wrap"
  >
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#2A9D3F"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        />
        <small
          className="small mb-0"
        />
        <small
          className="small mb-0 text-uppercase"
        >
          #2A9D3F
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#2A9D3F"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#2A9D3F"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#3C3C3C"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        />
        <small
          className="small mb-0"
        />
        <small
          className="small mb-0 text-uppercase"
        >
          #3C3C3C
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3C3C3C"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3C3C3C"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#C8C8C8"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        />
        <small
          className="small mb-0"
        />
        <small
          className="small mb-0 text-uppercase"
        >
          #C8C8C8
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#C8C8C8"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#C8C8C8"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#000000"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        />
        <small
          className="small mb-0"
        />
        <small
          className="small mb-0 text-uppercase"
        >
          #000000
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#000000"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#000000"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box has-border"
      >
        <svg>
          <rect
            fill="#FFFFFF"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        />
        <small
          className="small mb-0"
        />
        <small
          className="small mb-0 text-uppercase"
        >
          #FFFFFF
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Core: Color SystemColors renders 1`] = `
<section>
  <h2
    id="system-colors"
  >
    System colors
  </h2>
  <p>
    We have four primary system colors (red, blue, green, and yellow) which all have a lighter complementary version as well. 
  </p>
  <div
    className="color-group"
  >
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#8c0d14"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Error dark
        </p>
        <small
          className="small mb-0"
        >
          system-error-dark
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #8c0d14
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#8c0d14"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#8c0d14"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#B5111A"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Error
        </p>
        <small
          className="small mb-0"
        >
          system-error
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #B5111A
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#B5111A"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#B5111A"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#FCEEE9"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Error light
        </p>
        <small
          className="small mb-0"
        >
          system-error-light
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #FCEEE9
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FCEEE9"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FCEEE9"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#E97423"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Warning
        </p>
        <small
          className="small mb-0"
        >
          system-warning
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #E97423
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#E97423"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#E97423"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#FEF2E2"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Warning light
        </p>
        <small
          className="small mb-0"
        >
          system-warning-light
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #FEF2E2
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FEF2E2"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FEF2E2"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#3C7213"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Success
        </p>
        <small
          className="small mb-0"
        >
          system-success
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #3C7213
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3C7213"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3C7213"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#F2F7EB"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Success light
        </p>
        <small
          className="small mb-0"
        >
          system-success-light
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #F2F7EB
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#F2F7EB"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#F2F7EB"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#3961A7"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Info
        </p>
        <small
          className="small mb-0"
        >
          system-info
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #3961A7
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3961A7"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#3961A7"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#EBF1FA"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Info light
        </p>
        <small
          className="small mb-0"
        >
          system-info-light
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #EBF1FA
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBF1FA"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#EBF1FA"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Core: Color TextColors renders 1`] = `
<section>
  <h2
    id="text-colors"
  >
    Text colors
  </h2>
  <p>
    Brown is our default text color that should be used for all normal text besides links and text on dark backgrounds or images. For links, use turquoise and for text on dark backgrounds or images use white. A lighter brown is used as a muted text color for smaller or less important text that shouldn’t be the primary focus.
  </p>
  <div
    className="color-group"
  >
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#512B2B"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown
        </p>
        <small
          className="small mb-0"
        >
          text-default
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #512B2B
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#72605E"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Brown medium
        </p>
        <small
          className="small mb-0"
        >
          text-muted
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #72605E
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#72605E"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#72605E"
              />
            </svg>
            <i
              className="material-icons warning"
            >
              warning
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box "
      >
        <svg>
          <rect
            fill="#257886"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          Turquoise dark
        </p>
        <small
          className="small mb-0"
        >
          text-link
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #257886
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-white-container"
          >
            <svg
              className="white-box first-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#257886"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#257886"
              />
            </svg>
            <i
              className="material-icons cancel"
            >
              error
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      className="d-flex flex-column mb-2"
    >
      <div
        className="color-box has-border"
      >
        <svg>
          <rect
            fill="#FFFFFF"
          />
        </svg>
      </div>
      <div
        className="text-box d-flex flex-column"
      >
        <p
          className="font-weight-bold mb-0"
        >
          White
        </p>
        <small
          className="small mb-0"
        >
          text-white
        </small>
        <small
          className="small mb-0 text-uppercase"
        >
          #FFFFFF
        </small>
        <div
          className="contrast-box"
        >
          <div
            className="contrast-black-container"
          >
            <svg
              className="first-svg"
            >
              <rect
                fill="#512B2B"
              />
            </svg>
            <svg
              className="second-svg"
            >
              <rect
                fill="#FFFFFF"
              />
            </svg>
            <i
              className="material-icons check"
            >
              check_circle
            </i>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Core: Color renders 1`] = `null`;
